# quark-py

./: .gitignore  README.md  engine.py  main.py  pyproject.toml  quark.py  requirements.txt
docs/: develop.md  quickstart.md  start.ipynb  start_server.ipynb
examples/: main.ipynb  main.py  start_server.ipynb
src/quark/: __init__.py  __main__.py  cache.py  config.py  db.py  install.py  loader.py  message.py  middleware.py  quark.py  schemas.py  storage.py  utils.py
src/quark/app/: account.py  action_log.py  auth.py  config.py  dashboard.py  department.py  file.py  image.py  layout.py  login.py  menu.py  permission.py  position.py  role.py  upload.py  user.py  web_config.py
src/quark/app/actions/: __init__.py  batch_delete.py  batch_delete_role.py  batch_disable.py  batch_enable.py  batch_export.py  change_status.py  create_drawer.py  create_link.py  create_modal.py  data_scope.py  delete.py  delete_role.py  delete_special.py  detail_drawer.py  detail_link.py  detail_modal.py  edit_drawer.py  edit_link.py  edit_modal.py  export.py  form_back.py  (+13 more)
src/quark/component/: component.py
src/quark/controller/: dashboard.py  layout.py  login.py  resource.py
src/quark/core/: class_loader.py  login_render.py  resource_render.py
src/quark/dal/: db.py
src/quark/locales/: zh-hans.yml
src/quark/model/: action_log.py  attachment.py  attachment_category.py  config.py  department.py  menu.py  menu_has_permission.py  permission.py  position.py  role.py  role_has_department.py  role_has_menu.py  role_has_permission.py  user.py  user_has_role.py
src/quark/models/: __init__.py  action_log.py  attachment.py  attachment_category.py  config.py  department.py  menu.py  menu_has_permission.py  menu_permission.py  permission.py  position.py  role.py  role_department.py  role_has_department.py  role_has_menu.py  role_has_permission.py  role_menu.py  role_permission.py  user.py  user_has_role.py  user_role.py
src/quark/routes/: auth.py  dashboard.py  layout.py  login.py  resource.py  upload.py
src/quark/service/: action_log.py  attachment.py  attachment_category.py  auth.py  auth_service.py  config.py  department.py  menu.py  permission.py  position.py  role.py  user.py
src/quark/services/: __init__.py  action_log.py  attachment.py  attachment_category.py  auth.py  config.py  department.py  menu.py  permission.py  position.py  role.py  user.py
src/quark/template/: auth.py  dashboard.py  layout.py  login.py  module.py  page.py  performs_queries.py  performs_validation.py  resolves_actions.py  resolves_fields.py  resolves_searches.py  resolves_toolbar.py  resource.py  resource_create.py  resource_detail.py  resource_edit.py  resource_form.py  resource_index.py  upload.py
src/quark/utils/: bcrypt.py  lister.py  loader.py
template/controller/: resource.py
(+213 files in other folders)
