[project]
name = "quark-py"
version = "0.0.1"
description = "Flask + Ant Design Pro 前后端分离的管理后台，Build Anything With Quark"
authors = [
    {name = "tangtanglove",email = "dai_hang_love@126.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "importlib (>=1.0.4,<2.0.0)",
    "python-i18n (>=0.3.9,<0.4.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "flask-caching (>=2.3.1,<3.0.0)",
    "captcha (>=0.7.1,<0.8.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]

[tool.poetry]
packages = [{include = "quark", from = "src"}]

[[tool.poetry.source]]
name = "ustc"
url = "https://pypi.mirrors.ustc.edu.cn/simple"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
