[project]
name = "quark-py"
version = "0.1.4"
description = "FastAPI + Ant Design Pro front-end and back-end separated admin dashboard, Build Anything With Quark"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "aiomysql>=0.2.0",
    "bcrypt>=4.3.0",
    "captcha>=0.7.1",
    "fastapi>=0.115.12",
    "fastapi-cache2>=0.2.2",
    "python-multipart>=0.0.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "psutil>=7.0.0",
    "inflection>=0.5.1",
    "python-i18n>=0.3.9",
    "python-jose[cryptography]>=3.5.0",
    "tortoise-orm>=0.25.0",
    "uvicorn>=0.34.2",
    "filetype>=1.2.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
quark = ["web/**", "web/.gitkeep", "web/**/.gitkeep"]

[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple"
